--- a/2014/UnitTestYourClientSideJavaScript/code/css/styles.css
+++ b/2014/UnitTestYourClientSideJavaScript/code/css/styles.css
@@ -1,6 +1,41 @@
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 20px;
+  font-size: 18px;
+  font-family: Verdana;
+  color: #3A3A3A;
+}
+a {
+  color: #4C4C4C;
+}
+a:hover {
+  color: #498538;
+}
 label, input {
+  display: block;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul::after {
+  content: " ";
+  clear: both;
+  display: table;
+}
+ul li {
+  float: left;
+  margin: 0 1em 0 0;
+}
+ul li a {
   display: block;
 }
 .register-form {
   display: none;
+}
+input {
+  padding: 0.6em;
 }
